feat : 6-(8) 새로운 Product 추가